Working on Angular

--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -21,8 +21,8 @@
     <div class="row-fluid">
       <div class="span2">
         <!--Sidebar-->
-        <div id="focus"><a href="/#/new">New Recipe</a></div>
-        <div><a href="/#/">Recipe List</a></div>
+        <div id="focus"><a href="#/new">New Recipe</a></div>
+        <div><a href="#/">Recipe List</a></div>
 
       </div>
       <div class="span10">
