--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -1,34 +1,156 @@
 <!DOCTYPE html>
 <html   lang="en" ng-app="guthub">
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
   <title>GutHub - Create and Share</title>
-  <script src="scripts/vendor/angular.min.js"></script>
+
+    <script src="scripts/vendor/angular.min.js"></script>
   <script src="scripts/vendor/angular-resource.min.js"></script>
   <script src="scripts/directives/directives.js"></script>
-  <script src="scripts/services/services.js"></script>
+    <script src="scripts/directives/modal.js"></script>
+
+    <script src="scripts/services/services.js"></script>
   <script src="scripts/controllers/controllers.js"></script>
-  <link href="styles/bootstrap.css" rel="stylesheet">
-  <link href="styles/guthub.css" rel="stylesheet">
+  <!--<link href="styles/bootstrap.css" rel="stylesheet">-->
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css">
+
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
-  <header>
-    <h1>GutHub</h1>
-  </header>
+
+
+
 
   <div butterbar>Loading...</div>
 
-  <div class="container-fluid">
-    <div class="row-fluid">
-      <div class="span2">
-        <!--Sidebar-->
-        <div id="focus"><a href="#/new">New Need Item</a></div>
-        <div><a href="#/">Need Item List</a></div>
+  <!--<div class="container-fluid">-->
+    <!--<div class="row-fluid">-->
+      <!--<div class="span2">-->
+        <!--&lt;!&ndash;Sidebar&ndash;&gt;-->
+        <!--<div id="focus"><a href="#/new">New Need Item</a></div>-->
+        <!--<div><a href="#/">Need Item List</a></div>-->
 
+      <!--</div>-->
+      <!--<div class="span10">-->
+        <!--<div ng-view></div>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Buy4Me</a>
+          </div>
+          <div class="navbar-collapse collapse">
+              <form class="navbar-form navbar-right" role="form">
+                  <div class="form-group">
+                      <input type="text" placeholder="Email" class="form-control">
+                  </div>
+                  <div class="form-group">
+                      <input type="password" placeholder="Password" class="form-control">
+                  </div>
+                  <button type="submit" class="btn btn-success">Sign in</button>
+              </form>
+          </div><!--/.navbar-collapse -->
       </div>
-      <div class="span10">
-        <div ng-view></div>
-      </div>
-    </div>
   </div>
+
+
+  <!-- Main jumbotron for a primary marketing message or call to action -->
+  <div class="jumbotron">
+      <div class="container">
+          <h1>Hello, world!</h1>
+          <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+
+          <p id="focus"><a class="btn btn-primary btn-lg" href="#/new" role="button">New Need Item</a></p>
+      </div>
+  </div>
+
+  <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+          <div class="col-md-4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          </div>
+          <div class="col-md-4">
+              <h2>Heading</h2>
+              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+              <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          </div>
+          <div class="col-md-4">
+              <h2>Heading</h2>
+              <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+              <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          </div>
+      </div>
+
+      <hr>
+      <!-- Button trigger modal -->
+      <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+          Launch demo modal
+      </button>
+
+      <!-- Modal -->
+      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                  </div>
+                  <div class="modal-body">
+                      ...
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+              </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+      <footer>
+          <p>&copy; Company 2013</p>
+      </footer>
+  </div> <!-- /container -->
+
+
+
+
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+
+  <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.5.0.js"></script>
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+
 </body>
 </html>
