--- a/web-app/app/index.html
+++ b/web-app/app/index.html
@@ -130,7 +130,7 @@
                   </div>
 
                       <div class="form-actions">
-                          <button type="button" class="btn btn-primary" ng-disabled="needItemForm.$invalid" data-dismiss="modal">Save</button>
+                          <button class="btn btn-primary" ng-disabled="needItemForm.$invalid">Save</button>
                           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                       </div>
                   </form>
